--- a/exercises/All_Questions.tex
+++ b/exercises/All_Questions.tex
@@ -146,6 +146,8 @@
 \printexercises{exercises/12_07_exercises.tex}
 \addtocounter{section}{1}
 \printexercises{exercises/12_08_exercises.tex}
+\addtocounter{section}{1}
+\printexercises{exercises/12_09_exercises.tex}
 \addtocounter{chapter}{1}\setcounter{section}{0}\addtocounter{section}{1}
 \printexercises{exercises/13_01_exercises.tex}
 \addtocounter{section}{1}
@@ -158,3 +160,5 @@
 \printexercises{exercises/13_05_exercises.tex}
 \addtocounter{section}{1}
 \printexercises{exercises/13_06_exercises.tex}
+\addtocounter{section}{1}
+\printexercises{exercises/13_07_exercises.tex}
