--- a/Calculus.tex
+++ b/Calculus.tex
@@ -222,6 +222,7 @@
 \input{text/12_Directional_Derivatives}
 \input{text/12_Tangent_Planes_Lines}
 \input{text/12_Extrema}
+\input{text/12_Lagrange_Multipliers}
 
 %%\addtocounter{chapter}{12}
 \clearpage{\pagestyle{empty}\cleardoublepage}
@@ -233,6 +234,7 @@
 \input{text/13_Center_of_Mass}
 \input{text/13_Surface_Area}
 \input{text/13_Triple_Integration}
+\input{text/13_Cylindrical_Spherical}
 
 
 %%%\layout
