--- a/exercises/13_07_exercises.tex
+++ b/exercises/13_07_exercises.tex
@@ -7,4 +7,8 @@
 
 \printproblems
 \exsetinput{exercises/13_07_exset_01}
+\exsetinput{exercises/13_07_exset_02}
+\exsetinput{exercises/13_07_exset_03}
+\exsetinput{exercises/13_07_exset_04}
+\exsetinput{exercises/13_07_exset_05}
 
