--- a/CalculusIII.tex
+++ b/CalculusIII.tex
@@ -277,16 +277,16 @@
 
 %%%\addtocounter{chapter}{12}
 %
-\clearpage{\pagestyle{empty}\cleardoublepage}
-\chapter{Vector Calculus}\label{chapter:vec_calc}
-\thispagestyle{empty}
-\input{text/14_Vector_Fields}
-\input{text/14_Line_Integrals}
-\input{text/14_Greens_Theorem}
-\addtocontents{toc}{\protect\thispagestyle{empty}}
-\input{text/14_Surface_Integrals}
-\input{text/14_Divergence_Theorem}
-\input{text/14_Stokes_Curl}
+%\clearpage{\pagestyle{empty}\cleardoublepage}
+%\chapter{Vector Calculus}\label{chapter:vec_calc}
+%\thispagestyle{empty}
+%\input{text/14_Vector_Fields}
+%\input{text/14_Line_Integrals}
+%\input{text/14_Greens_Theorem}
+%\addtocontents{toc}{\protect\thispagestyle{empty}}
+%\input{text/14_Surface_Integrals}
+%\input{text/14_Divergence_Theorem}
+%\input{text/14_Stokes_Curl}
 
 %% This prints the exercise section
 %
