--- a/text/12_Lagrange_Multipliers.tex
+++ b/text/12_Lagrange_Multipliers.tex
@@ -6,7 +6,11 @@ At the absolute minimum of $f(x, y)$, if one exists, the requirement $g(x, y) = 
 In that case the minimum point is not allowed. We cannot use just $f_x = 0$ and $f_y = 0$ as
 those equations don't account for g. We must find equations for the constrained minimum or constrained maximum. They will involve $f_x$ and $f_y$, and also $g_x$ and $g_y$, which give local information about $f$ and $g$. To see the equations, we look at two examples.\\
 
-\example{ex_lagrange1}{}{Minimize $f(x,y) = x^2 + y^2$ subject to the restraint $g(x,y) = 2x + y = k$, for a constant $k$.}{Look at the level curves in Figure \ref{}. They are circles $$x^2 + y^2 = c.$$ When $c$ is small, the circles do not touch the line $2x + y = k$. There are no points that satisfy the constraint, when $c$ is too small. Now increase $c$. Eventually the growing circles $x^2 + y^2 = c$ will just touch the line $x + 2y = k$. The point where they touch is the winner. It gives the smallest value of $c$ that can be achieved on the line. The touching point is $(x_{\text{min}}, y_{\text{min}})$, and the value of $c$ there is $f_{\text{min}}$.
+\mfigure[scale=0.55]{.5}{Circles $f=c$ tangent to line $g=k$; parallel gradients}{fig:fig_lagrange_first_example}{figures/fig_lagrange_first_example}
+
+\example{ex_lagrange1}{}{Minimize $f(x,y) = x^2 + y^2$ subject to the restraint $g(x,y) = 2x + y = k$, for a constant $k$.}{Look at the level curves in Figure \ref{fig:fig_lagrange_first_example}. They are circles $$x^2 + y^2 = c.$$ When $c$ is small, the circles do not touch the line $2x + y = k$. There are no points that satisfy the constraint, when $c$ is too small. Now increase $c$. Eventually the growing circles $x^2 + y^2 = c$ will just touch the line $x + 2y = k$. The point where they touch is the winner. It gives the smallest value of $c$ that can be achieved on the line. The touching point is $(x_{\text{min}}, y_{\text{min}})$, and the value of $c$ there is $f_{\text{min}}$.
+
+
 
 What equation describes that point? When the circle touches the line, they are
 tangent. They have the same slope. The perpendiculars to the circle and the line go in
@@ -34,7 +38,9 @@ To minimize or maximize $f(x,y)$ subject to $g(x,y) = k$, solve this system of t
 \index{Lagrange Multipliers}
 }
 
-\example{ex_lagrange2}{}{Find the maximum and minimum values of $f(x,y) = x^2 + y^2$ on the ellipse $g(x,y) = (x-1)^2 + 4y^2 = 4$.}{As in Figure \ref{}, the circles $x^2 + y^2 = c$ grow until they touch the ellipse.  The touching point is $(x_{\text{min}},y_{\text{min}})$ and that smallest value of $c$ is $f_{\text{min}}$.  As the circles continue to grow, they cut through the ellipse.  Finally there is a point $(x_{\text{max}},y_{\text{max}})$ where the last circle touches.  That largest value of $c$ is $f_{\text{max}}$.  
+\mfigure[scale=0.6]{.5}{Ellipse $g=4$ tangent to line $g=k$}{fig:fig_lagrange_second_example}{figures/fig_lagrange_second_example}
+
+\example{ex_lagrange2}{}{Find the maximum and minimum values of $f(x,y) = x^2 + y^2$ on the ellipse $g(x,y) = (x-1)^2 + 4y^2 = 4$.}{As in Figure \ref{fig:fig_lagrange_second_example}, the circles $x^2 + y^2 = c$ grow until they touch the ellipse.  The touching point is $(x_{\text{min}},y_{\text{min}})$ and that smallest value of $c$ is $f_{\text{min}}$.  As the circles continue to grow, they cut through the ellipse.  Finally there is a point $(x_{\text{max}},y_{\text{max}})$ where the last circle touches.  That largest value of $c$ is $f_{\text{max}}$.  
 
 The minimum and maximum are described by the same rule: the circle is tangent to the ellipse.  The perpendiculars go in the same direction.  Therefore $\nabla f$ is a multiple of $\nabla g$, and the unknown multiplier is $\lambda$. 
 \begin{align*}
@@ -85,7 +91,9 @@ The whole subject of minimization or maximization is called optimization. Its ap
 
 The function to minimize or maximize is now $f(x,y,z)$ and two constraints are given by $g(x,y,z) = k_1$ and $h(x,y,z) = k_2$, for two constants $k_1$ and $k_2$.  The multipliers are $\lambda_1$ and $\lambda_2$.  We need at least three variables $x$, $y$, and $z$ because two constraints would completely determine $x$ and $y$ without a third.
 
-Figure \ref{} shows the geometry behind these equations.  For convenience, suppose $f$ is $x^2 + y^2 + z^2$, and so we are minimizing distance squared.  The constraints $$g = x + y + z = 9 \: \text{ and } \: h = x + 2y + 3z = 20$$ are linear, and their graphs are planes.  The constraints keep the points $(x,y,z)$ on both planes, and therefore on the line where they intersect.  We are therefore finding the squared distance from $(0,0,0)$ to a line again.  
+Figure \ref{fig:fig_lagrange_geometry_2_constraints} shows the geometry behind these equations.  For convenience, suppose $f$ is $x^2 + y^2 + z^2$, and so we are minimizing distance squared.  The constraints $$g = x + y + z = 9 \: \text{ and } \: h = x + 2y + 3z = 20$$ are linear, and their graphs are planes.  The constraints keep the points $(x,y,z)$ on both planes, and therefore on the line where they intersect.  We are therefore finding the squared distance from $(0,0,0)$ to a line again.  
+
+\mfigure[scale=0.6]{.3}{Perpendicular vector $\nabla f$ is a combination of $\lambda_1 \nabla g+\lambda_2 \nabla h$}{fig:fig_lagrange_geometry_2_constraints}{figures/fig_lagrange_geometry_2_constraints}
 
 What equations do we solve in this case?  The level surfaces $x^2 + y^2 + z^2 = c$ are spheres.  They grow as $c$ increases.  The first sphere to touch the line is tangent to it, and that touching point gives the minimum solution (the smallest $c$). All three vectors $\nabla f$, $\nabla g$, $\nabla h$ are perpendicular to the line:
 \begin{align*}
@@ -108,7 +116,9 @@ subject to $g(x,y,z) = k_1$ and $h(x,y,z) = k_2$. To minimize or maximize $f(x,y
 \index{Lagrange Multipliers}
 }
 
-\example{ex_lagrange4}{}{Find the minimum value of $f(x,y,z) = x^2 + y^2 + z^2$ when $$g = x+y+z = 9 \: \text{ and } \: h = x+2y+3z = 20.$$}{In figure \ref{}, the normals to those planes are $\nabla g = (1,1,1)$ and $\nabla h = (1,2,3)$.  The gradient of $f$ is $\nabla f = (2x,2y,2z)$.  The equation $$\nabla f = \lambda_1 \nabla g + \lambda_2 \nabla h$$ becomes
+\mfigure[scale=0.5]{.5}{Perpendicular vector $\nabla f$ is a combination of $\lambda_1 \nabla g+\lambda_2 \nabla h$}{fig:fig_lagrange_fourth_example}{figures/fig_lagrange_fourth_example}
+
+\example{ex_lagrange4}{}{Find the minimum value of $f(x,y,z) = x^2 + y^2 + z^2$ when $$g = x+y+z = 9 \: \text{ and } \: h = x+2y+3z = 20.$$}{In figure \ref{fig:fig_lagrange_fourth_example}, the normals to those planes are $\nabla g = (1,1,1)$ and $\nabla h = (1,2,3)$.  The gradient of $f$ is $\nabla f = (2x,2y,2z)$.  The equation $$\nabla f = \lambda_1 \nabla g + \lambda_2 \nabla h$$ becomes
 $$2x = \lambda_1 + \lambda_2, \: 2y = \lambda_1 + 2\lambda_2, \: 2z = \lambda_1 + 3 \lambda_2.$$
 Solve for $x$, $y$, and $z$ and substitute these into the constraint equations to get
 \begin{align*}
