--- a/text/01_Limits_At_Infinity.tex
+++ b/text/01_Limits_At_Infinity.tex
@@ -2,9 +2,9 @@
 
 In this section we relax Definition \ref{def:limit} even further by considering situations when it makes sense to let $c$ be ``infinity'' in the equation $\ds \lim_{x\to c}f(x) = L$.
 
-Consider again $f(x) = 1/x^2$, as shown in Figure \ref{fig:oneoverxsquared}. Note that as $x$ gets very large, $f(x)$ gets very, very small. We could represent this concept with notation such as $$\lim_{x\rightarrow \infty} \frac1{x^2}=0.$$
+Consider again $f(x) = 1/x^2$, as shown in Figure \ref{fig:limits_at_infinity_oneoverxsquared}. Note that as $x$ gets very large, $f(x)$ gets very, very small. We could represent this concept with notation such as $$\lim_{x\rightarrow \infty} \frac1{x^2}=0.$$
 
-\mfigure{.8}{Graphing $f(x) = 1/x^2$.}{fig:oneoverxsquared}{figures/figoneoverxsquared}
+\mfigure{.8}{Graphing $f(x) = 1/x^2$.}{fig:limits_at_infinity_oneoverxsquared}{figures/figoneoverxsquared}
 
 %In the graph of $f(x)=1/x^2$ shown below, we see that near 0, the function explodes, getting larger and larger, heading off to infinity.
 
