Updated Title Pages
Updated title pages to include DSC and contributors.

--- a/text/title_pageII.tex
+++ b/text/title_pageII.tex
@@ -3,13 +3,13 @@
 \hskip 125pt\begin{minipage}{\textwidth}
 \begin{flushright}
 
-\textsc{\large \apex\ {\Huge Calculus II}} \\
+\textsc{\large \apex\ {\Huge Calculus II}, {\small Version 3.0}} \\
 
 %\textsl{Third Edition}, 
-{\small Version 3.0}\\
-
+\textsc{Dalton State College Edition}\\
+{
 \Large
-\vspace{1in}
+\vspace{0.25in}
 
 Gregory Hartman, Ph.D.
 
@@ -35,7 +35,7 @@ Dimplekumar Chalishajar, Ph.D.
 
 \emph{\small Department of Applied Mathematics}
 
-\emph{\small Virginia Military Institute}\vskip 25pt
+\emph{\small Virginia Military Institute}\vskip 15pt
 
 \parbox{200pt}{\textit{Editor}}\hskip 2cm \phantom{.}
 %\textit{Editor}\hskip 7cm\phantom{.}
@@ -44,9 +44,18 @@ Jennifer Bowen, Ph.D.
 
 \emph{\small Department of Mathematics and Computer Science}
 
-\emph{\small The College of Wooster}
+\emph{\small The College of Wooster} \vskip 15pt
+
+\parbox{200pt}{\textit{Dalton State Contributors}}\hskip 2cm \phantom{.}
+%\textit{Editor}\hskip 7cm\phantom{.}
 
 \normalsize
+
+Mike Hilgemann \vskip 5pt
+
+Jason Schmurr \vskip 5pt
+
+Tom Gonzalez }
 \end{flushright}
 \end{minipage}
 
