Added More Limit Problems to 1.6
Added more limit problems to Section 1.6, per Issue #4

--- a/exercises/01_06_exset_04.tex
+++ b/exercises/01_06_exset_04.tex
@@ -2,6 +2,32 @@
 {, evaluate the given limit.
 }
 \exinput{exercises/01_06_ex_56}
+\exinput{exercises/01_06_ex_56b}
+\exinput{exercises/01_06_ex_56c}
+\exinput{exercises/01_06_infinite_limit_rational_01a}
+\exinput{exercises/01_06_infinite_limit_rational_01b}
+\exinput{exercises/01_06_infinite_limit_rational_01c}
+\exinput{exercises/01_06_infinite_limit_rational_01d}
+\exinput{exercises/01_06_infinite_limit_rational_01e}
+\exinput{exercises/01_06_infinite_limit_rational_01f}
+\exinput{exercises/01_06_ex_14}
+\exinput{exercises/01_06_ex_14b}
+\exinput{exercises/01_06_ex_14c}
+\exinput{exercises/01_06_ex_14d}
+\exinput{exercises/01_06_ex_14e}
+\exinput{exercises/01_06_ex_14f}
+\exinput{exercises/01_06_ex_17}
 \exinput{exercises/01_06_ex_57}
 \exinput{exercises/01_06_ex_58}
 \exinput{exercises/01_06_ex_59}
+\exinput{exercises/01_06_ex_59b}
+\exinput{exercises/01_06_ex_59c}
+\exinput{exercises/01_06_infinite_limit_exponential_01a}
+\exinput{exercises/01_06_infinite_limit_exponential_01b}
+\exinput{exercises/01_06_infinite_limit_exponential_01c}
+\exinput{exercises/01_06_infinite_limit_rational_02a}
+\exinput{exercises/01_06_infinite_limit_rational_02b}
+\exinput{exercises/01_06_infinite_limit_rational_02c}
+\exinput{exercises/01_06_infinite_limit_ln_01a}
+\exinput{exercises/01_06_infinite_limit_ln_01b}
+\exinput{exercises/01_06_infinite_limit_ln_01c}
