--- a/exercises/01_06_exercises.tex
+++ b/exercises/01_06_exercises.tex
@@ -7,10 +7,11 @@
 \exinput{exercises/01_06_ex_08}
 \printproblems
 \exsetinput{exercises/01_06_exset_01}
-\exsetinput{exercises/01_06_exset_02}
+\exsetinput{exercises/01_06_exset_04}
+%\exsetinput{exercises/01_06_exset_02}
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/01_06_exset_03}
-\exsetinput{exercises/01_06_exset_04}
+%\exsetinput{exercises/01_06_exset_04}
 \printreview
 \exinput{exercises/01_06_ex_27}
 \exinput{exercises/01_06_ex_28}
