Fixed Section 4.1, Problem 10
Fixed the statement of Section 4.1, Problem 10, per Issue #20

--- a/exercises/04_02_ex_10.tex
+++ b/exercises/04_02_ex_10.tex
@@ -1,4 +1,4 @@
-{A boat is being pulled into a dock at a constant rate of 30ft/min by a winch located 10ft above the deck of the boat.
+{A rope attached to a boat is being reeled in at a constant rate of 30ft/min by a winch located 10ft above the deck of the boat.
 
 \noindent\begin{minipage}{\linewidth}
 \centering
@@ -18,7 +18,7 @@ At what rate is the boat approaching the dock when the boat is:
 \item  $30.59$ ft/min
 \item	 $36.1$ ft/min
 \item  $301$ ft/min
-\item	 The boat no longer floats as usual, but is being pulled up by the winch (assuming it has the power to do so).	
+\item	 The boat no longer floats as usual, but is being pulled up out of the water by the winch (assuming it has the power to do so).	
 \end{enumerate}
 }
 
