Fixed Section 2.6 Problem 30
Fixed the answer to part a of Section 2.6, Problem number 30. Changed the order of the problems in Section 1.7

--- a/exercises/02_06_ex_26.tex
+++ b/exercises/02_06_ex_26.tex
@@ -6,7 +6,7 @@
 \myincludegraphics[scale=.8]{figures/fig02_06_ex_26}
 }
 {\begin{enumerate}
-\item	$y=-1/3x+1$
+\item	$y=-x+1$
 \item	$y = 3\sqrt{3}/4$
 \end{enumerate}
 }
