--- a/text/01_Limits_At_Infinity.tex
+++ b/text/01_Limits_At_Infinity.tex
@@ -185,6 +185,18 @@ Use Theorem \ref{thm:lim_rational_fn_at_infty} to evaluate each of the following
 \vskip -\baselineskip
 }\\
 
+Here are some important facts on limits of transcendental functions involving infinity.
+
+\theorem{thm:lim_transcendental_fn_involving_infty}{Limits of Transcendental Functions Involving Infinity}
+{Let $a$ be a real number.
+\begin{enumerate}
+\item If $a>1$, then $\ds\lim_{x\rightarrow -\infty} a^x = 0$ and $\ds \lim_{x\rightarrow \infty} a^x = \infty$.
+\item If $0<a<1$, then $\ds\lim_{x\rightarrow -\infty} a^x = \infty$ and $\ds \lim_{x\rightarrow \infty} a^x = 0$.
+\item $\ds \lim_{x \to 0^+} \ln(x) = -\infty$ and $\ds \lim_{x \to \infty} \ln(x) = \infty$
+\item $\ds \lim_{x \to -\infty} \tan^{-1}(x) = -\frac{\pi}{2}$ and $\ds \lim_{x \to \infty} \tan^{-1}(x) = \frac{\pi}{2}$
+\end{enumerate}
+}
+
 \clearpage
 \vskip 2\baselineskip
 \noindent\textbf{\Large Chapter Summary}
