Added Exercises to Section 1.7
Added exercises involving polynomial, rational, algebraic, and transcendental functions per Issue #5 , Issue #6, and Issue #7.

--- a/exercises/01_07_exset_04.tex
+++ b/exercises/01_07_exset_04.tex
@@ -1,7 +1,62 @@
 {\noindent In Exercises}
 {, evaluate the given limit.
 }
+
+\exinput{exercises/01_07_polynomial_01a}
+\exinput{exercises/01_07_polynomial_01b}
+\exinput{exercises/01_07_polynomial_02a}
+\exinput{exercises/01_07_polynomial_02b}
+\exinput{exercises/01_07_polynomial_03a}
+\exinput{exercises/01_07_polynomial_03b}
+\exinput{exercises/01_07_polynomial_04a}
+\exinput{exercises/01_07_polynomial_04b}
+\exinput{exercises/01_07_polynomial_05a}
+\exinput{exercises/01_07_polynomial_05b}
+\exinput{exercises/01_07_rational_05a}
+\exinput{exercises/01_07_rational_05b}
+\exinput{exercises/01_07_rational_01a}
+\exinput{exercises/01_07_rational_01b}
 \exinput{exercises/01_06_ex_23}
+\exinput{exercises/01_06_ex_23b}
+\exinput{exercises/01_07_rational_04a}
+\exinput{exercises/01_07_rational_04b}
 \exinput{exercises/01_06_ex_24}
+\exinput{exercises/01_06_ex_24b}
+\exinput{exercises/01_07_rational_06a}
+\exinput{exercises/01_07_rational_06b}
+\exinput{exercises/01_07_rational_03a}
+\exinput{exercises/01_07_rational_03b}
 \exinput{exercises/01_06_ex_25}
+\exinput{exercises/01_06_ex_25b}
+\exinput{exercises/01_07_rational_02a}
+\exinput{exercises/01_07_rational_02b}
 \exinput{exercises/01_06_ex_26}
+\exinput{exercises/01_06_ex_26b}
+\exinput{exercises/01_07_algebraic_09a}
+\exinput{exercises/01_07_algebraic_09b}
+\exinput{exercises/01_07_algebraic_06a}
+\exinput{exercises/01_07_algebraic_06b}
+\exinput{exercises/01_07_algebraic_01a}
+\exinput{exercises/01_07_algebraic_01b}
+\exinput{exercises/01_07_algebraic_08a}
+\exinput{exercises/01_07_algebraic_08b}
+\exinput{exercises/01_07_algebraic_02a}
+\exinput{exercises/01_07_algebraic_02b}
+\exinput{exercises/01_07_algebraic_05a}
+\exinput{exercises/01_07_algebraic_05b}
+\exinput{exercises/01_07_algebraic_04a}
+\exinput{exercises/01_07_algebraic_04b}
+\exinput{exercises/01_07_algebraic_07a}
+\exinput{exercises/01_07_algebraic_07b}
+\exinput{exercises/01_07_algebraic_03a}
+\exinput{exercises/01_07_algebraic_03b}
+\exinput{exercises/01_07_transcendental_01}
+\exinput{exercises/01_07_transcendental_02}
+\exinput{exercises/01_07_transcendental_03}
+\exinput{exercises/01_07_transcendental_04}
+\exinput{exercises/01_07_transcendental_05}
+\exinput{exercises/01_07_transcendental_06}
+\exinput{exercises/01_07_transcendental_07}
+\exinput{exercises/01_07_transcendental_08}
+\exinput{exercises/01_07_transcendental_09}
+\exinput{exercises/01_07_transcendental_10}
