Fixed Issues in 6.2 and 6.3
Some tables and equations were running off the page in Sections 6.2 and 6.3.

--- a/text/06_Trig_Sub.tex
+++ b/text/06_Trig_Sub.tex
@@ -34,7 +34,7 @@ We now describe in detail Trigonometric Substitution. This method excels when de
 \enlargethispage{2\baselineskip}
 
 \setboxwidth{100pt}
-%\hskip-100pt%
+\hskip-100pt%
 \noindent\begin{minipage}{\linewidth+100pt}
 \keyidea{idea:trigsub}{Trigonometric Substitution}
 {\begin{enumerate}
